# math_h

./: .gitignore  CMakeLists.txt  LICENSE.txt  MIT.html  README.md  bit_opr.cc  bit_opr.h  complex.h  exception_math_h.h  functions.h  interpolate.h  randomfunc.h  sigma.h  singleparam.h  sympson.h  templates.h  wrap.cc  wrap1.h  wrap2.h  wrap3.h  wrap_func_indexer.h  wrap_func_indexer_indexer.h  wrap_func_number_indexer.h
Example/: 1-plot.cpp  2-interpolation.cpp  3-randomfunc.cpp  4-integrate.cpp  5-statistics.cpp  6-nabla.cpp  7-lorentzvectors.cpp  8-uncertainties.cpp  CMakeLists.txt  integrate.cpp  interpolate_perver.cpp  interpolation.cpp  interpolation2.cpp  lorentzvectors.cpp  matrix.cpp  nabla.cpp  randomfunc.cpp  randomfunc2.cpp  randomfunc3.cpp  sigma.cpp  sigma3.cpp  statistics.cpp  vectors.cpp
Examples/: CMakeLists.txt  ComplexExample.cpp  ConvolutionExample.cpp  InterpolationExample.cpp  SigmaExample.cpp  SympsonExample.cpp  WrapExample.cpp
Examples/ConvolutionExample/: ConvolutionExample.pro  convolution_example
Examples/SympsonExample/: SympsonExample.pro  sympson_example
Examples/WrapExample/: .plotscript.gp  wrap_example  wrap_example.cpp  wrap_example.pro
Examples/mandelbrot/: mandelbrot  mandelbrot.pro  mandelbrot_main.cpp  mandelbrotwindow.cpp  mandelbrotwindow.h  mandelbrotwindow.ui
Examples/random-compare/: device.cpp  pseudo.cpp  randcmp.cpp  randcmp.h  random-compare  random-compare.pro
examples/: ConvolutionExample.cpp  SympsonExample.cpp
gnuplot/: gnuplot.cpp  gnuplot.h
gnuplot_wrap/: CMakeLists.txt  gnuplot_wrap.cpp
include/: bit_opr.h  gnuplot_wrap.h  interpolate.h  randomfunc.h  sigma.h  singleparam.h  sympson.h
include/math_h/: bit_opr.cc  bit_opr.h  chains.h  error.h  exception_math_h.h  functions.h  hist.h  hists.h  integrate.h  interpolate.h  lorentzvector.h  matrices.h  numeric_diff.h  points.h  randomfunc.h  sigma.h  sigma2.h  sigma3.h  singleparam.h  statistics.h  structures.h  sympson.h  tabledata.h  vectors.h  vectortransformations.h
math_h_tests/: CMakeLists.txt  bitopr.cpp  functions.cpp  interpolate.cpp  randomfunc.cpp  sigma.cpp  singleparam.cpp  sympson.cpp
tests/: CMakeLists.txt  bitopr.cpp  chains.cpp  functions.cpp  hist.cpp  hists.cpp  integrate.cpp  interpolate.cpp  lorentzvector.cpp  matrices.cpp  numeric_diff.cpp  points.cpp  randomfunc.cpp  sigma.cpp  sigma2.cpp  sigma3.cpp  singleparam.cpp  statistics.cpp  structures.cpp  sympson.cpp  tabledata.cpp  tabledata1.cpp  tabledata2.cpp  tabledata3.cpp  vectors.cpp  vectortransformations.cpp
