cmake_minimum_required(VERSION 2.6)
project(math_h_examples)
set(CMAKE_CXX_FLAGS "-std=gnu++11")
include_directories(..)
add_executable(wrap WrapExample.cpp)
set(CMAKE_CXX_FLAGS "-std=gnu++11")
add_executable(sympson SympsonExample.cpp)
set(CMAKE_CXX_FLAGS "-std=gnu++11")
add_executable(convolution ConvolutionExample.cpp)
set(CMAKE_CXX_FLAGS "-std=gnu++11")
add_executable(sigma SigmaExample.cpp)
