cmake_minimum_required(VERSION 2.6)
project(math_h_tests)
include_directories(..)
set(gtestlibs gtest gtest_main)
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
add_executable(math_h_test bitopr.cpp functions.cpp interpolate.cpp randomfunc.cpp sigma.cpp singleparam.cpp sympson.cpp)
target_link_libraries(math_h_test ${gtestlibs})
