cmake_minimum_required(VERSION 2.6)
find_package(GTest REQUIRED)
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
set(gtestlibs gtest gtest_main)
enable_testing()
add_executable(math_h_test bitopr.cpp functions.cpp interpolate.cpp randomfunc.cpp sigma.cpp singleparam.cpp sympson.cpp)
target_link_libraries(math_h_test ${gtestlibs})
add_test(math_h_test math_h_test)