enable_testing()
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
add_executable(math_h_test bitopr.cpp functions.cpp interpolate.cpp sigma.cpp structures.cpp integrate.cpp randomfunc.cpp)
target_link_libraries(math_h_test ${GTEST_BOTH_LIBRARIES})
add_test(math_h math_h_test)